--- a/MyFinance/Views/Shared/_Layout.cshtml
+++ b/MyFinance/Views/Shared/_Layout.cshtml
@@ -28,6 +28,21 @@
                         <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Accounts" asp-action="Index">Account</a>
                         </li>
+                        <li>
+                           <!-- BOTÃO DE LOGOUT -->
+                            @if (User.Identity?.IsAuthenticated ?? false)
+                            {
+                                <form asp-controller="Account"
+                                    asp-action="Logout"
+                                    method="post"
+                                    class="d-inline">
+                                    @Html.AntiForgeryToken()
+                                    <button type="submit" class="btn btn-secondary">
+                                        Logout
+                                    </button>
+                                </form>
+                            }
+                        </li>
                     </ul>
                 </div>
             </div>
